[gd_scene load_steps=17 format=3 uid="uid://bu3l16ur50lpo"]

[ext_resource type="Script" path="res://scripts/map.gd" id="1_rlxky"]
[ext_resource type="PackedScene" uid="uid://dpa6pot5pdhmd" path="res://objects/tile.tscn" id="2_mnudw"]
[ext_resource type="PackedScene" uid="uid://c6wgo0a0mg653" path="res://objects/wall.tscn" id="3_yum8g"]
[ext_resource type="PackedScene" uid="uid://cpyr1j3167d5a" path="res://objects/floor.tscn" id="4_tufjg"]
[ext_resource type="PackedScene" uid="uid://bjahfmppf0vku" path="res://objects/ceiling.tscn" id="5_2nd6o"]
[ext_resource type="PackedScene" uid="uid://cl8mify4niq42" path="res://objects/pillar.tscn" id="6_ygj38"]
[ext_resource type="Script" path="res://scripts/tile.gd" id="7_0m68d"]
[ext_resource type="PackedScene" uid="uid://crm1710xekod1" path="res://objects/chest.tscn" id="7_odi63"]
[ext_resource type="Script" path="res://scripts/wall.gd" id="7_xfu5v"]
[ext_resource type="Script" path="res://scripts/chest.gd" id="8_1761m"]
[ext_resource type="Material" uid="uid://cfdedormylm3u" path="res://textures/door(placeholder).tres" id="9_mtisv"]
[ext_resource type="Script" path="res://scripts/test0.gd" id="9_sn6w8"]
[ext_resource type="Script" path="res://scripts/mapLoader.gd" id="10_ck241"]
[ext_resource type="Script" path="res://scripts/dynamic_object.gd" id="11_q2swu"]

[sub_resource type="QuadMesh" id="QuadMesh_yugjl"]
material = ExtResource("9_mtisv")

[sub_resource type="BoxMesh" id="BoxMesh_77qdc"]
size = Vector3(0.7, 0.8, 0.2)

[node name="Map" type="Node"]
script = ExtResource("1_rlxky")

[node name="Tile_0_0" parent="." instance=ExtResource("2_mnudw")]

[node name="Wall_W" parent="Tile_0_0" instance=ExtResource("3_yum8g")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Floor" parent="Tile_0_0" instance=ExtResource("4_tufjg")]

[node name="Ceiling" parent="Tile_0_0" instance=ExtResource("5_2nd6o")]

[node name="Wall_S" parent="Tile_0_0" instance=ExtResource("3_yum8g")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Tile_0_1" parent="." instance=ExtResource("2_mnudw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="Wall_W" parent="Tile_0_1" instance=ExtResource("3_yum8g")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Floor" parent="Tile_0_1" instance=ExtResource("4_tufjg")]

[node name="Ceiling" parent="Tile_0_1" instance=ExtResource("5_2nd6o")]

[node name="Wall_N" parent="Tile_0_1" instance=ExtResource("3_yum8g")]

[node name="Tile_0_2" parent="." instance=ExtResource("2_mnudw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="Wall_N" parent="Tile_0_2" instance=ExtResource("3_yum8g")]

[node name="Wall_S" parent="Tile_0_2" instance=ExtResource("3_yum8g")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Wall_W" parent="Tile_0_2" instance=ExtResource("3_yum8g")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Floor" parent="Tile_0_2" instance=ExtResource("4_tufjg")]

[node name="Ceiling" parent="Tile_0_2" instance=ExtResource("5_2nd6o")]

[node name="Tile_1_0" parent="." instance=ExtResource("2_mnudw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)

[node name="Floor" parent="Tile_1_0" instance=ExtResource("4_tufjg")]

[node name="Ceiling" parent="Tile_1_0" instance=ExtResource("5_2nd6o")]

[node name="Pillar_NE" parent="Tile_1_0" instance=ExtResource("6_ygj38")]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 0, 0)

[node name="Wall_S" parent="Tile_1_0" instance=ExtResource("3_yum8g")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Tile_1_1" parent="." instance=ExtResource("2_mnudw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -1)

[node name="Wall_E" parent="Tile_1_1" instance=ExtResource("3_yum8g")]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 0, 0)

[node name="Floor" parent="Tile_1_1" instance=ExtResource("4_tufjg")]

[node name="Ceiling" parent="Tile_1_1" instance=ExtResource("5_2nd6o")]

[node name="Pillar_NW" parent="Tile_1_1" instance=ExtResource("6_ygj38")]

[node name="Tile_1_2" parent="." instance=ExtResource("2_mnudw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -2)

[node name="Wall_E" parent="Tile_1_2" instance=ExtResource("3_yum8g")]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 0, 0)

[node name="Floor" parent="Tile_1_2" instance=ExtResource("4_tufjg")]

[node name="Ceiling" parent="Tile_1_2" instance=ExtResource("5_2nd6o")]

[node name="Pillar_SW" parent="Tile_1_2" instance=ExtResource("6_ygj38")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Pillar_NW" parent="Tile_1_2" instance=ExtResource("6_ygj38")]

[node name="Tile_1_3" parent="." instance=ExtResource("2_mnudw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -3)

[node name="Wall_E" parent="Tile_1_3" instance=ExtResource("3_yum8g")]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 0, 0)

[node name="Wall_W" parent="Tile_1_3" instance=ExtResource("3_yum8g")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Floor" parent="Tile_1_3" instance=ExtResource("4_tufjg")]

[node name="Ceiling" parent="Tile_1_3" instance=ExtResource("5_2nd6o")]

[node name="Tile_1_4" parent="." instance=ExtResource("2_mnudw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -4)

[node name="Wall_W" parent="Tile_1_4" instance=ExtResource("3_yum8g")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Floor" parent="Tile_1_4" instance=ExtResource("4_tufjg")]

[node name="Ceiling" parent="Tile_1_4" instance=ExtResource("5_2nd6o")]

[node name="Pillar_NE" parent="Tile_1_4" instance=ExtResource("6_ygj38")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)

[node name="Pillar_SE" parent="Tile_1_4" instance=ExtResource("6_ygj38")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Tile_1_5" parent="." instance=ExtResource("2_mnudw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -5)

[node name="Wall_E" parent="Tile_1_5" instance=ExtResource("3_yum8g")]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 0, 0)

[node name="Wall_W" parent="Tile_1_5" instance=ExtResource("3_yum8g")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Floor" parent="Tile_1_5" instance=ExtResource("4_tufjg")]

[node name="Ceiling" parent="Tile_1_5" instance=ExtResource("5_2nd6o")]

[node name="Tile_1_6" parent="." instance=ExtResource("2_mnudw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -6)

[node name="Wall_N" parent="Tile_1_6" instance=ExtResource("3_yum8g")]

[node name="Wall_W" parent="Tile_1_6" instance=ExtResource("3_yum8g")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Floor" parent="Tile_1_6" instance=ExtResource("4_tufjg")]

[node name="Ceiling" parent="Tile_1_6" instance=ExtResource("5_2nd6o")]

[node name="Pillar_SE" parent="Tile_1_6" instance=ExtResource("6_ygj38")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Tile_2_0" parent="." instance=ExtResource("2_mnudw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)

[node name="Floor" parent="Tile_2_0" instance=ExtResource("4_tufjg")]

[node name="Ceiling" parent="Tile_2_0" instance=ExtResource("5_2nd6o")]

[node name="Wall_N" parent="Tile_2_0" instance=ExtResource("3_yum8g")]

[node name="Wall_S" parent="Tile_2_0" instance=ExtResource("3_yum8g")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Tile_2_4" parent="." instance=ExtResource("2_mnudw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -4)

[node name="Floor" parent="Tile_2_4" instance=ExtResource("4_tufjg")]

[node name="Ceiling" parent="Tile_2_4" instance=ExtResource("5_2nd6o")]

[node name="Wall_N" parent="Tile_2_4" instance=ExtResource("3_yum8g")]

[node name="Wall_S" parent="Tile_2_4" instance=ExtResource("3_yum8g")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Tile_2_6" parent="." instance=ExtResource("2_mnudw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -6)

[node name="Floor" parent="Tile_2_6" instance=ExtResource("4_tufjg")]

[node name="Ceiling" parent="Tile_2_6" instance=ExtResource("5_2nd6o")]

[node name="Wall_S" parent="Tile_2_6" instance=ExtResource("3_yum8g")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Wall_N" parent="Tile_2_6" instance=ExtResource("3_yum8g")]

[node name="Tile_3_0" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0)
script = ExtResource("7_0m68d")

[node name="Floor" parent="Tile_3_0" instance=ExtResource("4_tufjg")]

[node name="Ceiling" parent="Tile_3_0" instance=ExtResource("5_2nd6o")]

[node name="Wall_E" type="Node3D" parent="Tile_3_0"]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 0, 0)
script = ExtResource("7_xfu5v")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Tile_3_0/Wall_E"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.55271e-15, 0.5, -0.469)
mesh = SubResource("QuadMesh_yugjl")

[node name="Pillar_NW" parent="Tile_3_0" instance=ExtResource("6_ygj38")]

[node name="Wall_S" parent="Tile_3_0" instance=ExtResource("3_yum8g")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Tile_3_1" parent="." instance=ExtResource("2_mnudw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -1)

[node name="Floor" parent="Tile_3_1" instance=ExtResource("4_tufjg")]

[node name="Ceiling" parent="Tile_3_1" instance=ExtResource("5_2nd6o")]

[node name="Wall_E" parent="Tile_3_1" instance=ExtResource("3_yum8g")]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 0, 0)

[node name="Wall_W" parent="Tile_3_1" instance=ExtResource("3_yum8g")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Tile_3_2" parent="." instance=ExtResource("2_mnudw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -2)

[node name="Floor" parent="Tile_3_2" instance=ExtResource("4_tufjg")]

[node name="Ceiling" parent="Tile_3_2" instance=ExtResource("5_2nd6o")]

[node name="Wall_E" parent="Tile_3_2" instance=ExtResource("3_yum8g")]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 0, 0)

[node name="Wall_N" parent="Tile_3_2" instance=ExtResource("3_yum8g")]

[node name="Wall_W" parent="Tile_3_2" instance=ExtResource("3_yum8g")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Tile_3_4" parent="." instance=ExtResource("2_mnudw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -4)

[node name="Floor" parent="Tile_3_4" instance=ExtResource("4_tufjg")]

[node name="Ceiling" parent="Tile_3_4" instance=ExtResource("5_2nd6o")]

[node name="Wall_E" parent="Tile_3_4" instance=ExtResource("3_yum8g")]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 0, 0)

[node name="Wall_S" parent="Tile_3_4" instance=ExtResource("3_yum8g")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Pillar_NW" parent="Tile_3_4" instance=ExtResource("6_ygj38")]

[node name="Tile_3_5" parent="." instance=ExtResource("2_mnudw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -5)

[node name="Floor" parent="Tile_3_5" instance=ExtResource("4_tufjg")]

[node name="Ceiling" parent="Tile_3_5" instance=ExtResource("5_2nd6o")]

[node name="Wall_E" parent="Tile_3_5" instance=ExtResource("3_yum8g")]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 0, 0)

[node name="Wall_W" parent="Tile_3_5" instance=ExtResource("3_yum8g")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Tile_3_6" parent="." instance=ExtResource("2_mnudw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -6)

[node name="Floor" parent="Tile_3_6" instance=ExtResource("4_tufjg")]

[node name="Ceiling" parent="Tile_3_6" instance=ExtResource("5_2nd6o")]

[node name="Wall_E" parent="Tile_3_6" instance=ExtResource("3_yum8g")]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 0, 0)

[node name="Wall_N" parent="Tile_3_6" instance=ExtResource("3_yum8g")]

[node name="Pillar_SW" parent="Tile_3_6" instance=ExtResource("6_ygj38")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Static_Objects" type="Node" parent="."]

[node name="Chest0" parent="Static_Objects" instance=ExtResource("7_odi63")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)
script = ExtResource("8_1761m")
m_interactableN = true
m_interactableS = true
m_interactableE = true
m_interactableW = true

[node name="Test0" type="Node3D" parent="Static_Objects"]
script = ExtResource("9_sn6w8")
m_interactableN = true
m_interactableS = true
m_interactableE = true
m_interactableW = true

[node name="Test1" type="Node3D" parent="Static_Objects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0)
script = ExtResource("10_ck241")
m_mapName = "map_test2"
m_direction = 1
m_interactableE = true

[node name="Dynamic_Objects" type="Node" parent="."]

[node name="Test_Enemy" type="Node3D" parent="Dynamic_Objects"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3, 0, -4)
script = ExtResource("11_q2swu")
m_direction = 3
m_hasAI = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Dynamic_Objects/Test_Enemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_77qdc")

[node name="Tile" parent="." instance=ExtResource("2_mnudw")]

[editable path="Tile_0_0"]
[editable path="Tile_0_1"]
[editable path="Tile_0_2"]
[editable path="Tile_1_0"]
[editable path="Tile_1_1"]
[editable path="Tile_1_2"]
[editable path="Tile_1_3"]
[editable path="Tile_1_4"]
[editable path="Tile_1_5"]
[editable path="Tile_1_6"]
